# gpu_xuanran

./: REPORT.md
code/: CMakeLists.txt  GUIDING_REPORT.md  IMPLEMENTATION.md  PA1REPORT.md  REPORT.md  TEXTURE_README.txt  compare_bmp.py  run_all.sh  run_diag.sh  test_guiding.py  代码框架.md
code/build_manual/: PA1-2
code/include/: bvh_builder.hpp  camera.hpp  cuda_alloc.hpp  cuda_device.hpp  cuda_renderer.hpp  cuda_types.h  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  raytracer.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp
code/output/acceptance/: README.txt
code/output/final/: README.txt
code/output/fresnel/: README.txt
code/output/ward/: README.txt
code/results/: README.txt  final_simple.
code/scripts/: README.txt  analyze_fresnel_quads.py  analyze_fresnel_regions.py  decimate_dragon.py  fresnel_figures.py  fresnel_render.sh  guiding_compare_figures.py  make_texture_showcase.py  sample_ward_pixels.py  ward_ab_analysis.py  ward_highlight_compare.py  ward_showcase_analysis.py
code/src/: bvh_builder.cpp  cuda_path_tracer.cu  cuda_scene_builder.cpp  gen_textures.cpp  image.cpp  main.cpp  mesh.cpp  scene_parser.cpp  texture.cpp
code/testcases/: scene02_cube.txt  scene03_sphere.txt  scene04_axes.txt  scene05_bunny_200.txt  scene06_bunny_1k.txt  scene07_shine.txt  scene08_path.txt  scene08_whitted.txt  scene_brdf_metal_compare.txt  scene_bvh_bunny.txt  scene_classic_mis.README.txt  scene_classic_mis.txt  scene_dispersion.txt  scene_dragon_showcase.README.txt  scene_dragon_showcase.txt  scene_final_showcase.txt  scene_final_simple.txt  scene_fresnel_compare.txt  scene_fresnel_cornell_compare.txt  scene_fresnel_cornell_grazing.txt  scene_fresnel_cornell_water_glass.txt  scene_fresnel_debug_transmit.txt  scene_fresnel_grazing.txt  scene_fresnel_grazing_low.txt  scene_fresnel_grazing_topdown.txt  scene_fresnel_water_glass.txt  scene_glossy.txt  scene_glossy_sweep.txt  scene_gold_glossy.txt  scene_gold_ward.txt  scene_guiding_ajar.txt  scene_guiding_demo.txt  scene_guiding_demo_bright.txt  scene_guiding_door.txt  scene_guiding_door_copy.txt  scene_guiding_indirect.txt  scene_guiding_occluder.txt  scene_guiding_window.txt  scene_mis_demo.txt  scene_path.txt  (+24 more)
submit/: README.txt
